Revision history for perl distribution Convos

4.01 Not Released
 - Add Nordaaker as background image to login screen #439
 - Fix rendering convos images on small screen #450
 - Fix not allowing injected "#call:" and "#send:" links
 - Fix not looping through all dialogs and marking them as read on reconnect
 - Fix not showing "date changed" in <Search/> before search is performed
 - Fix not asking for protocol handling all the time in Firefox
 - Extended the webmanifest
 - Changed to pagejs for routing on client side
 - Replaced "settings" in svelte context with process.env

4.00 2020-03-24T16:00:00+0900
 - Add custom styling for image previews from Convos #450
 - Add checkbox for "forced_connection" in "settings" #456
 - Add search to frontend #187
 - Made the theming support more flexible #394
 - Fix not sending /query before sending a list of channels to the server #442
 - Fix issue in firefox where padding-bottom is ignored
 - Fix not removing space from sent message before "/"
 - Fix creating paste from multiline messages
 - Syncronized Makefile.PL and cpanfile, and bumped dependencies
 - Travis runs the test suite successfully again

3.12 2020-03-04T11:28:00+0900
 - Add /clear history [name] command #150
 - Fix NaN in the help page, for "/say" command
 - Fix Timer failed: Can't call method "write" on an undefined value in Irc.pm
 - Fix showing "day changed" indicator
 - Add "s" after seconds in wsEventSentWhois()
 - Add JOIN as alias for QUERY (EXPERIMENTAL)
 - Made the welcome messages less annoying
 - Bumped node dependencies

3.11 2020-03-02T15:11:00+0900
 - Fix exception when searching too long a period #448
   Contributor: Doug Bell
 - Add support for pasting images #437
 - Add a welcome message when joining a new conversation
 - Fix handling err_badchannelkey #268
 - Fix button alignment in <DialogAdd>
 - Rollback "Avoid reloading conversation when reconnecting to WebSocket"

3.10 2020-02-21T16:09:00+0900
 - Fix loading notifications
