@@ -349,6 +349,7 @@ template {
  * Add the correct display in IE 10.
  */
 
+.hidden,
 [hidden] {
   display: none !important;
 }
